Fix wrangler config to use assets directory

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,7 @@
 {
   "name": "puntaje-carioca-web",
   "compatibility_date": "2025-12-07",
-  "pages_build_output_dir": "."
+  "assets": {
+    "directory": "."
+  }
 }
